# MKUltra

./: .gitignore  README.md
MKUltra/: CMakeLists.txt  CMakeSettings.json  MKUltra.jucer
MKUltra/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
MKUltra/MKUltra/: CMakeLists.txt
MKUltra/MKUltra/app/: MKUltra.cpp  envelope.cpp  instrument.cpp  oscillator.cpp  synth.cpp
MKUltra/MKUltra/include/: MKUltra.h  envelope.h  instrument.h  olcNoiseMaker.h  oscillator.h  sound.h
MKUltra/Source/: EnvelopeComponent.h  HPFComponent.h  LPFComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  MasterComponent.h  (+10 more)
Source/: EnvelopeComponent.h  HPFComponent.h  LPFComponent.h  Main.cpp  MainComponent.h  MasterComponent.h  MixerComponent.h  Noise.h  OscillatorComponent.h  PanelComponent.h  SawAnalogDigital.h  SawAnalogWave.h  SquareWave.h  Synth.h  TriangleWave.h
Test1/: synth_prototype1.cpp
Test10/: EnvelopeADSR.cpp  envelopeADSR.h  oscMixer.cpp  oscMixer.h  oscillator.cpp  synth.cpp
Test11/: envelope.cpp  envelope.h  instrument.cpp  instrument.h  oscillator.cpp  oscillator.h  synth.cpp
Test2/: synth_prototype1.cpp
Test3/: synth_prototype1.cpp
Test4/: midi.cpp  synth_prototype1.cpp
Test5/: midi.cpp  olcNoiseMaker.h  synth_prototype.cpp
Test6/: midi.cpp
Test7/: SynthesizerInterface.cpp  SynthesizerInterface.h
Test8/: oscillator.cpp  oscillator.h  synth.cpp
Test9/: oscMixer.cpp  oscillator.cpp  oscillator.h  synth.cpp
docs/: index.html  journal.html  music.html  proposal.html  report.html  sounds.html  update.html  video.html
(+15 files in other folders)
